tests/snapshots/parse__tests__parse_scsd6.snap
---
source: tests/parse.rs
expression: "parse::<f32>(include_str!(\"../tests/data/netlib/scsd6\"))?"
---
name: SCSD6
rows:
  - row_type: Nr
    row_name: "50000000"
  - row_type: Eq
    row_name: "10000001"
  - row_type: Eq
    row_name: "20000001"
  - row_type: Eq
    row_name: "10000002"
  - row_type: Eq
    row_name: "20000002"
  - row_type: Eq
    row_name: "10000003"
  - row_type: Eq
    row_name: "20000003"
  - row_type: Eq
    row_name: "10000004"
  - row_type: Eq
    row_name: "20000004"
  - row_type: Eq
    row_name: "10000005"
  - row_type: Eq
    row_name: "20000005"
  - row_type: Eq
    row_name: "10000006"
  - row_type: Eq
    row_name: "20000006"
  - row_type: Eq
    row_name: "10000007"
  - row_type: Eq
    row_name: "20000007"
  - row_type: Eq
    row_name: "10000008"
  - row_type: Eq
    row_name: "20000008"
  - row_type: Eq
    row_name: "10000009"
  - row_type: Eq
    row_name: "20000009"
  - row_type: Eq
    row_name: "10000010"
  - row_type: Eq
    row_name: "20000010"
  - row_type: Eq
    row_name: "10000011"
  - row_type: Eq
    row_name: "20000011"
  - row_type: Eq
    row_name: "10000012"
  - row_type: Eq
    row_name: "20000012"
  - row_type: Eq
    row_name: "10000013"
  - row_type: Eq
    row_name: "20000013"
  - row_type: Eq
    row_name: "10000014"
  - row_type: Eq
    row_name: "20000014"
  - row_type: Eq
    row_name: "10000015"
  - row_type: Eq
    row_name: "20000015"
  - row_type: Eq
    row_name: "10000016"
  - row_type: Eq
    row_name: "20000016"
  - row_type: Eq
    row_name: "10000017"
  - row_type: Eq
    row_name: "20000017"
  - row_type: Eq
    row_name: "10000018"
  - row_type: Eq
    row_name: "20000018"
  - row_type: Eq
    row_name: "10000019"
  - row_type: Eq
    row_name: "20000019"
  - row_type: Eq
    row_name: "10000020"
  - row_type: Eq
    row_name: "20000020"
  - row_type: Eq
    row_name: "10000021"
  - row_type: Eq
    row_name: "20000021"
  - row_type: Eq
    row_name: "10000022"
  - row_type: Eq
    row_name: "20000022"
  - row_type: Eq
    row_name: "10000023"
  - row_type: Eq
    row_name: "20000023"
  - row_type: Eq
    row_name: "10000024"
  - row_type: Eq
    row_name: "20000024"
  - row_type: Eq
    row_name: "10000025"
  - row_type: Eq
    row_name: "20000025"
  - row_type: Eq
    row_name: "10000026"
  - row_type: Eq
    row_name: "20000026"
  - row_type: Eq
    row_name: "10000027"
  - row_type: Eq
    row_name: "20000027"
  - row_type: Eq
    row_name: "10000028"
  - row_type: Eq
    row_name: "20000028"
  - row_type: Eq
    row_name: "10000029"
  - row_type: Eq
    row_name: "20000029"
  - row_type: Eq
    row_name: "10000030"
  - row_type: Eq
    row_name: "20000030"
  - row_type: Eq
    row_name: "10000031"
  - row_type: Eq
    row_name: "20000031"
  - row_type: Eq
    row_name: "10000032"
  - row_type: Eq
    row_name: "20000032"
  - row_type: Eq
    row_name: "10000033"
  - row_type: Eq
    row_name: "20000033"
  - row_type: Eq
    row_name: "10000034"
  - row_type: Eq
    row_name: "20000034"
  - row_type: Eq
    row_name: "10000035"
  - row_type: Eq
    row_name: "20000035"
  - row_type: Eq
    row_name: "10000036"
  - row_type: Eq
    row_name: "20000036"
  - row_type: Eq
    row_name: "10000037"
  - row_type: Eq
    row_name: "20000037"
  - row_type: Eq
    row_name: "10000038"
  - row_type: Eq
    row_name: "20000038"
  - row_type: Eq
    row_name: "10000039"
  - row_type: Eq
    row_name: "20000039"
  - row_type: Eq
    row_name: "10000040"
  - row_type: Eq
    row_name: "20000040"
  - row_type: Eq
    row_name: "10000041"
  - row_type: Eq
    row_name: "20000041"
  - row_type: Eq
    row_name: "10000042"
  - row_type: Eq
    row_name: "20000042"
  - row_type: Eq
    row_name: "10000043"
  - row_type: Eq
    row_name: "20000043"
  - row_type: Eq
    row_name: "10000044"
  - row_type: Eq
    row_name: "20000044"
  - row_type: Eq
    row_name: "10000045"
  - row_type: Eq
    row_name: "20000045"
  - row_type: Eq
    row_name: "10000046"
  - row_type: Eq
    row_name: "20000046"
  - row_type: Eq
    row_name: "10000047"
  - row_type: Eq
    row_name: "20000047"
  - row_type: Eq
    row_name: "10000048"
  - row_type: Eq
    row_name: "20000048"
  - row_type: Eq
    row_name: "10000049"
  - row_type: Eq
    row_name: "20000049"
  - row_type: Eq
    row_name: "10000050"
  - row_type: Eq
    row_name: "20000050"
  - row_type: Eq
    row_name: "10000051"
  - row_type: Eq
    row_name: "20000051"
  - row_type: Eq
    row_name: "10000052"
  - row_type: Eq
    row_name: "20000052"
  - row_type: Eq
    row_name: "10000053"
  - row_type: Eq
    row_name: "20000053"
  - row_type: Eq
    row_name: "10000054"
  - row_type: Eq
    row_name: "20000054"
  - row_type: Eq
    row_name: "10000055"
  - row_type: Eq
    row_name: "20000055"
  - row_type: Eq
    row_name: "10000056"
  - row_type: Eq
    row_name: "20000056"
  - row_type: Eq
    row_name: "10000057"
  - row_type: Eq
    row_name: "20000057"
  - row_type: Eq
    row_name: "10000058"
  - row_type: Eq
    row_name: "20000058"
  - row_type: Eq
    row_name: "10000059"
  - row_type: Eq
    row_name: "20000059"
  - row_type: Eq
    row_name: "10000060"
  - row_type: Eq
    row_name: "20000060"
  - row_type: Eq
    row_name: "10000061"
  - row_type: Eq
    row_name: "20000061"
  - row_type: Eq
    row_name: "10000062"
  - row_type: Eq
    row_name: "20000062"
  - row_type: Eq
    row_name: "10000063"
  - row_type: Eq
    row_name: "20000063"
  - row_type: Eq
    row_name: "10000064"
  - row_type: Eq
    row_name: "20000064"
  - row_type: Eq
    row_name: "10000065"
  - row_type: Eq
    row_name: "20000065"
  - row_type: Eq
    row_name: "10000066"
  - row_type: Eq
    row_name: "20000066"
  - row_type: Eq
    row_name: "10000067"
  - row_type: Eq
    row_name: "20000067"
  - row_type: Eq
    row_name: "10000068"
  - row_type: Eq
    row_name: "20000068"
  - row_type: Eq
    row_name: "10000069"
  - row_type: Eq
    row_name: "20000069"
  - row_type: Eq
    row_name: "10000070"
  - row_type: Eq
    row_name: "20000070"
  - row_type: Eq
    row_name: "10000072"
  - row_type: Eq
    row_name: "20000072"
  - row_type: Eq
    row_name: "10000073"
  - row_type: Eq
    row_name: "20000073"
  - row_type: Eq
    row_name: "10000074"
  - row_type: Eq
    row_name: "20000074"
  - row_type: Eq
    row_name: "10000075"
columns:
  - name: "30001002"
    first_pair:
      row_name: "50000000"
      value: 1
    second_pair:
      row_name: "10000001"
      value: -1
rhs: ~
ranges: ~
bounds: ~

